globus-gram-client (13.18-1+gt6.@distro@) @distro@; urgency=low

  * Disable network-needing tests in pbuilder environment

 -- Globus Toolkit <support@globus.org>  Fri, 23 Jun 2017 14:36:52 -0400

globus-gram-client (13.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix tests makefile when openssl not present

 -- Globus Toolkit <support@globus.org>  Thu, 22 Jun 2017 11:21:16 -0400

globus-gram-client (13.16-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:46:31 -0400

globus-gram-client (13.15-1+gt6.@distro@) @distro@; urgency=low

  * Makefile fix

 -- Globus Toolkit <support@globus.org>  Thu, 18 Aug 2016 16:08:27 -0400

globus-gram-client (13.14-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:39:37 -0400

globus-gram-client (13.13-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:03:02 -0400

globus-gram-client (13.12-1+gt6.@distro@) @distro@; urgency=low

  * Fix test on static build

 -- Globus Toolkit <support@globus.org>  Mon, 05 Jan 2015 13:17:16 -0500

globus-gram-client (13.11-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:12:36 -0500

globus-gram-client (13.10-5+gt6.@distro@) @distro@; urgency=low

  * GT-567: Remove requirement that GRAM5 use SSLv3
  * Missing libltdl-dev and openssl dependencies
  * Remove latex dependencies

 -- Globus Toolkit <support@globus.org>  Fri, 24 Oct 2014 09:19:32 -0400

globus-gram-client (13.9-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:58:10 -0400

globus-gram-client (13.8-1+gt6.@distro@) @distro@; urgency=low
