@@ -27,9 +27,14 @@ else
 X509_CERT_DIR = $(abs_builddir)
 endif
 
+if !ENABLE_NET_TESTS
+    ENABLE_NET_TESTS_ENVIRONMENT=SKIP_NO_NET=1
+endif
+
 TESTS_ENVIRONMENT = export \
     X509_USER_CERT=$(X509_USER_CERT) \
     X509_USER_KEY=$(X509_USER_KEY) \
+    $(ENABLE_NET_TESTS_ENVIRONMENT) \
     X509_CERT_DIR=$(X509_CERT_DIR);
 LOG_COMPILER = $(LIBTOOL) --mode=execute $(GLOBUS_XIO_GSI_DLOPEN)
 
